--- a/stuff.html
+++ b/stuff.html
@@ -5,10 +5,11 @@
     <title>contact</title>
   </head>
   <body>
-    <p>phone number: poo-poo-1234</p>
+    <p>phone number: wat-wat-1234</p>
     <p>adress: toilet ave. tree, a park</p>
     <p>email: ghysejhhgredbrhdtgye@opkifjuyhrutsdgff.org</p>
     <hr size="3" noshade>
+    <p>everything here is a joke</p>
     <form action="index.html" method="post" enctype="text/plain">
       <label for="">ur name (replace all vowels with an o):</label>
       <input type="text" name="" value="">
